(v7.32) Updated WorldFunctions. Cleaned it up and added extra functions related to the world folder.